@@ -1,0 +1,65 @@
+// Copyright (C) 2010-2013, Gabriel Dos Reis.
+// All rights reserved.
+// Written by Gabriel Dos Reis.
+//
+// Redistribution and use in source and binary forms, with or without
+// modification, are permitted provided that the following conditions are
+// met:
+//
+//     - Redistributions of source code must retain the above copyright
+//       notice, this list of conditions and the following disclaimer.
+//
+//     - Redistributions in binary form must reproduce the above copyright
+//       notice, this list of conditions and the following disclaimer in
+//       the documentation and/or other materials provided with the
+//       distribution.
+//
+//     - Neither the name of OpenAxiom. nor the names of its contributors
+//       may be used to endorse or promote products derived from this
+//       software without specific prior written permission.
+//
+// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
+// IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
+// TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
+// PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER
+// OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+// EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+// PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+// PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+// LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+// NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+// SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+// --% Author: Gabriel Dos Reis
+// --% Description:
+// --%   Provide random access read to files through file mapping.
+
+#ifndef OPENAXIOM_FILEMAPPING_included
+#define OPENAXIOM_FILEMAPPING_included
+
+#include <open-axiom/storage>
+
+namespace OpenAxiom {
+   namespace Memory {
+      // -----------------
+      // -- FileMapping --
+      // -----------------
+      struct FileMapping {
+         explicit FileMapping(std::string);
+         FileMapping(FileMapping&&);
+         ~FileMapping();
+         const Byte* begin() const { return start; }
+         const Byte* end() const { return begin() + extent; }
+         std::size_t size() const { return extent; }
+      protected:
+         Byte* start;           // address at the mapped storage
+         size_t extent;         // length (in bytes) of the storage
+      private:
+         FileMapping(const FileMapping&) = delete;
+         FileMapping& operator=(const FileMapping&) = delete;
+      };
+   }      
+}
+
+#endif  // OPENAXIOM_FILEMAPPING_included
+
